test/conformance/chainsaw/verifyImages/clusterpolicy/standard/multiple-image-verification-attestations/policy-ready.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: multiple-image-verification-attestations
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
