test/conformance/chainsaw/verifyImages/clusterpolicy/standard/multiple-image-verification-attestations/policy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  multiple-image-verification-attestations
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: vuln-scan
  namespace:  multiple-image-verification-attestations
data:
  certificate: |-
    -----BEGIN CERTIFICATE-----
    MIIDTTCCAjWgAwIBAgIJAPI+zAzn4s0xMA0GCSqGSIb3DQEBCwUAMEwxCzAJBgNV
[...]
    uOKpF5rWAruB5PCIrquamOejpXV9aQA/K2JQDuc0mcKz
    -----END CERTIFICATE-----
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-image-attestation
spec:
  validationFailureAction: Enforce
  webhookTimeoutSeconds: 30
  failurePolicy: Fail  
  rules:
    - name: multiple-image-verification-attestations
      match:
        any:
        - resources:
            kinds:
              - Pod
      context:
      - name: vuln-scan
        configMap:
          name: vuln-scan
          namespace:  multiple-image-verification-attestations
      verifyImages:
        - type: Notary
          imageReferences:
            - "ghcr.io/kyverno/test-verify-image*"
          attestations:
            - type: vuln-scan
              name: scan
              attestors:
                - entries:
                    - certificates:
                        cert: "{{ vuln-scan.data.certificate }}"
