test/conformance/chainsaw/verifyImages/clusterpolicy/standard/multiple-image-verification-attestations/pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: multiple-image-verification-attestations
